# tinker

./: .gitignore  .gitmodules  README.md  cloud_expo_europe_attendees.py
development-environment-homer/: README.md  docker-compose.yml
django_first_steps/mysite/: README.md
django_first_steps/mysite/mysite/: settings.py  urls.py
django_first_steps/mysite/polls/: urls.py  views.py
django_first_steps/mysite/timon/: admin.py  apps.py  forms.py  models.py  terraform.py  tests.py  urls.py  views.py
go-testing/echoapi/: go.mod  go.sum  main.go
go-testing/hello-world/: main.go
go-testing/zero2hero/greetings/: greetings.go
go-testing/zero2hero/hello/: hello.go
golang_api_example/: main.go
hcloudtf/: loadbalancer.tf  network.tf  outputs.tf  server.tf  ssh_key.tf  terraform.tfstate  terraform.tfstate.backup  terraform.tfvars  variables.tf
kopf/work/: ephemeral.py  evc.yaml  pvc.yaml
multicloud-k8s/: README.md
multicloud-k8s/ansible/: playbook.yml  systemd.netdev
multicloud-k8s/terraform/: .terraform.lock.hcl  inventory.ini.tpl  inventory.tf  main.tf  outputs.tf  terraform.tfstate  terraform.tfstate.backup  terraform.tfvars  variables.tf
oracle-k8s/: deploy.sh  metallb-config.yaml
os-flavor-finder/: README.md  main.py
prism-mock-server/: Caddyfile  README.md  container-compose.yaml
rapi/: Cargo.toml  README.md
rapi/src/: main.rs
rust123/functions/src/: main.rs
rust123/guessing_game/src/: main.rs
rust123/variables/src/: main.rs
rust1o1/apitite/: Cargo.toml
rust1o1/apitite/src/: main.rs
rust1o1/guessing_game/src/: main.rs
(+26 files in other folders)
