[package]
name = "rapi"
version = "0.1.0"
edition = "2021"
authors = ["Tim Beermann <tibeer@outlook.de>"]
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["tibeer"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.10"
tokio = { version = "1.26.0", features = ["full"] }
